update full dataset

--- a/training_t5_CoSE.ipynb
+++ b/training_t5_CoSE.ipynb
@@ -1014,8 +1014,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea1d6809",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "3bf10708",
    "metadata": {},
    "outputs": [
@@ -1040,6 +1046,42 @@
     "\n",
     "input_text = \"\"\"question: Where would you put ice to keep it frozen?\n",
     "choices: A: oven; B: freezer; C: desk; D: backpack; E: pocket\n",
+    "explain your answer:\n",
+    "\"\"\"\n",
+    "\n",
+    "inputs = tokenizer(input_text, return_tensors=\"pt\").to(device)\n",
+    "outputs = model.generate(**inputs, max_new_tokens=100)\n",
+    "\n",
+    "print(tokenizer.decode(outputs[0], skip_special_tokens=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a4677dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "answer: D. Because D represents the best basketball player of all time.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import T5ForConditionalGeneration, T5Tokenizer\n",
+    "import torch\n",
+    "\n",
+    "device = \"mps\"\n",
+    "\n",
+    "model_path = \"/Users/damianli/Desktop/1508_project/common-sense-reasoning/t5_large_csqa_lora_merged\"\n",
+    "\n",
+    "tokenizer = T5Tokenizer.from_pretrained(model_path)\n",
+    "model = T5ForConditionalGeneration.from_pretrained(model_path).to(device)\n",
+    "\n",
+    "input_text = \"\"\"question: Who is the best basketball player of all time?\n",
+    "choices: A: hello world; B: apple; C: banana; D: orange\n",
     "explain your answer:\n",
     "\"\"\"\n",
     "\n",
